<resources>
    <string name="app_name">Turn Screen On</string>
    <string name="lock_screen_request_explanation">%1$s needs this permission to turn off the screen for the power saving feature.</string>
    <string name="openOsmand">Open OsmAnd</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="timeWorkingHeader">Время включения экрана</string>
    <string name="secondsShort">sec</string>
    <string name="OsmandVersion">OsmAnd Version</string>
    <string name="OsmandPlus">OsmAnd Plus</string>
    <string name="Osmand">OsmAnd</string>
    <string name="continueDesc">continue</string>
    <string name="sensorHeader">Использовать датчик  приближения</string>
    <string name="help">Help</string>
    <string name="install_instruction">You need to install <b>OsmAnd</b> or <b>OsmAnd+</b>, to use this plugin.</string>
    <string name="timeWorkingDescription">Set the time for which the screen will turn on, to display the map and navigation instructions.</string>
    <string name="sensorDescription">Проведите рукой над верхней частью экрана, чтобы включить экран во время навигации.</string>
    <string name="carTitle">Car</string>
    <string name="pedestrianTitle">Pedestrian</string>
    <string name="bicycleTitle">Bicycle</string>
    <string name="boatTitle">Boat</string>
    <string name="cancel">CANCEL</string>
    <string name="select_time">Select time</string>
    <string name="descriptionHeader">Turn Screen On</string>
    <string name="descriptionSubHeader">OsmAnd Plugin</string>
    <string name="pluginDescription">Плагин позволяет авоматически включать экран перед поворотом для отображение навигационных инструкций из OsmAnd или OsmAnd+.</string>
    <string name="osmandInstallActivityHeader">OsmAnd is needed</string>
    <string name="skip">Skip</string>
    <string name="osmand_logo"><![CDATA[OsmAnd — Offline Travel Maps & Navigation]]></string>
    <string name="permissionDescription">Для работы приложения, необходимо разрешние: <b>Device Admin</b>.\n\nDevice admin, даст возможность плагину, <b>включать</b> и <b>выключать</b> экран.\n\nНажмите продолжить, чтобы предоставить доступ к разрешению.</string>
    <string name="permission">Permission</string>
</resources>
