<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionsSetUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbPermissionActivityToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/permission"
            app:titleTextColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/permissionDescription"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/btnContinue"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="24dp"
        android:background="@color/violet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/continueDesc"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </FrameLayout>

</FrameLayout>